--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -320,6 +320,7 @@ section{
     position: relative;
     &::before{
         content: '';
+        position: absolute;
         left: 50%;
         top: 0%;
         width: 40%;
@@ -386,7 +387,7 @@ section{
 
 .portfolios{
     display: grid;
-    grid-template-columns: repeat(3, 1f);
+    grid-template-columns: repeat(3, 1fr);
     grid-gap: 2rem;
     margin-top: 3rem;
     .portfolio-item{
@@ -395,23 +396,67 @@ section{
         img{
             width: 100%;
             height: 300px;
-            object-fit: contain;
+            object-fit: cover;
             border-radius: 15px;
         }
         .hover-items{
             width: 100%;
             height: 100%;
-            background-color: var(--color-primary);
+            background-color: var(--color-secondary);
             position: absolute;
             left: 0;
             top: 0;
             border-radius: 15px;
+            display: flex;
             justify-content: center;
             align-items: center;
             flex-direction: column;
+            opacity: 0;
+            transform: scale(0);
+            transition: all .4s ease-in-out;
+            h3{
+                font-size: 1.5rem;
+                color: var(--color-white);
+                margin-bottom: 1.5rem;
+            }
+            .icons{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                .icon{
+                    background-color: var(--color-primary);
+                    border-radius: 50%;
+                    width: 50px;
+                    height: 50px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    margin: 0 1rem;
+                    cursor: pointer;
+                    transition: all .4s ease-in-out;
+                    i{
+                        font-size: 1.5rem;
+                        color: var(--color-white);
+                        margin: 0 1rem;
+                    }
+
+                    &:hover{
+                        background-color: var(--color-white);
+                        i{
+                            color:var(--color-primary);
+                        }
+                    }
+                }
+            }
         }
     }
 }
+
+.portfolio-item:hover .hover-items{
+    opacity: 1;
+    transform: scale(1);
+}
+
 
 
 /*independant components*/
