<updated theme color.>

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,7 +8,7 @@
 
 :root {
   --color-primary: #191d2b;
-  --color-secondary: #2df985;
+  --color-secondary: #ee5b22;
   --color-white: #FFFFFF;
   --color-black: #000;
   --color-grey0: #f8f8f8;
