Updated intro Photo and updated about me para

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,8 +7,8 @@
 }
 
 :root {
-  --color-primary: #191d2b;
-  --color-secondary: #ee5b22;
+  --color-primary: #84878f;
+  --color-secondary: #65f858;
   --color-white: #FFFFFF;
   --color-black: #000;
   --color-grey0: #f8f8f8;
